更新项目地址

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ function MainMenuClick(event, treeId, treeNode) {
                             <div style="padding: 0 15px; border-bottom: 1px #DDD solid;">
                                 <h3>Bootstrap for DWZ富客户端框架</h3>
                                 <h4>网址：<a href="http://www.xknaan.com/" target="_blank">http://www.xknaan.com/</a></h4>
+                                <h4>项目地址：<a href="http://git.oschina.net/xknaan/Bootstrap_for_DWZ" target="_blank">Bootstrap_for_DWZ Git@OSC</a></h4>
                             </div>
                         </div>
                         <div class="pageFormContent" layoutH="100">
