--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <h4>关于作者 - K'naan (萧克南)</h4>
             <div class="callout callout-red">
                 男，83年出生，Java程序员一枚。Jquery、Css均为自学，不擅言辞，美工粗糙。<br>
-                邮箱：15928109136#163.com<br>
+                邮箱：xknaan@163.com<br>
                 网站：<a href="http://www.xknaan.com/" target="_blank">http://www.xknaan.com/</a>
             </div>
         </div>
