拖拽插件修复销毁失败bug

--- a/dragsort.html
+++ b/dragsort.html
@@ -1,4 +1,4 @@
-<script type="text/javascript/">
+<script type="text/javascript">
 function IMG_saveOrder() {
     $('#j_image_box', navTab.getCurrentPanel()).find('.image-seq').each(function(i) {
         var $this = $(this);
