--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ function MainMenuClick(event, treeId, treeNode) {
                     <li>当前用户：admin</li>
                     <li><a href="changepwd.html" target="dialog" mask="true" rel="changepwd_page" width="400" height="260">修改密码</a></li>
                     <li><a href="../" target="_blank">网站首页</a></li>
+                    <li><a href="http://www.j-ui.com" target="_blank">DWZ(J-UI)官网</a></li>
                     <li><a href="login.html">退出</a></li>
                 </ul>
                 <ul class="topTheme" id="topTheme">
@@ -200,6 +201,9 @@ function MainMenuClick(event, treeId, treeNode) {
                                 <h3>Bootstrap for DWZ富客户端框架</h3>
                                 <h4>网址：<a href="http://www.xknaan.com/" target="_blank">http://www.xknaan.com/</a></h4>
                                 <h4>项目地址：<a href="http://git.oschina.net/xknaan/Bootstrap_for_DWZ" target="_blank">Bootstrap_for_DWZ Git@OSC</a></h4>
+                                <hr>
+                                <h4>DWZ(J-UI)官网：<a href="http://www.j-ui.com/" target="_blank">http://www.j-ui.com/</a></h4>
+                                <h4>Bootstrap中文网：<a href="http://www.bootcss.com/" target="_blank">http://www.bootcss.com/</a></h4>
                             </div>
                         </div>
                         <div class="pageFormContent" layoutH="100">
