更新微博地址

--- a/index.html
+++ b/index.html
@@ -198,12 +198,20 @@ function MainMenuClick(event, treeId, treeNode) {
                     <div class="page unitBox">
                         <div class="accountInfo">
                             <div style="padding: 0 15px; border-bottom: 1px #DDD solid;">
-                                <h3>Bootstrap for DWZ富客户端框架</h3>
-                                <h4>网址：<a href="http://www.xknaan.com/" target="_blank">http://www.xknaan.com/</a></h4>
-                                <h4>项目地址：<a href="http://git.oschina.net/xknaan/Bootstrap_for_DWZ" target="_blank">Bootstrap_for_DWZ Git@OSC</a></h4>
-                                <hr>
-                                <h4>DWZ(J-UI)官网：<a href="http://www.j-ui.com/" target="_blank">http://www.j-ui.com/</a></h4>
-                                <h4>Bootstrap中文网：<a href="http://www.bootcss.com/" target="_blank">http://www.bootcss.com/</a></h4>
+                                <h4>Bootstrap for DWZ富客户端框架</h4>
+                                <hr style="margin: 12px 0 0px;">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h5>网址：<a href="http://www.xknaan.com/" target="_blank">http://www.xknaan.com/</a></h5>
+                                        <h5>项目地址：<a href="http://git.oschina.net/xknaan/Bootstrap_for_DWZ" target="_blank">Bootstrap_for_DWZ Git@OSC</a></h5>
+                                        <h5>微博地址：<a href="http://weibo.com/xknaan" target="_blank">http://weibo.com/xknaan</a></h5>                                    
+                                    </div>
+                                    <div class="col-md-6">
+                                        
+                                        <h5>DWZ(J-UI)官网：<a href="http://www.j-ui.com/" target="_blank">http://www.j-ui.com/</a></h5>
+                                        <h5>Bootstrap中文网：<a href="http://www.bootcss.com/" target="_blank">http://www.bootcss.com/</a></h5>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="pageFormContent" layoutH="100">
