--- a/form-tags.html
+++ b/form-tags.html
@@ -19,7 +19,7 @@
                         </td>
                         <td>
                             <div class="tags-control" data-url="php/get-project-list.php" data-parametername="tagname" data-clearnotfound="true">
-                                <input type="text" class="tag-input" placeholder="输入标签，回车提交" />
+                                <input type="text" class="tag-input" size="20" placeholder="输入标签，回车提交" />
                             </div>
                         </td>
                         <td><pre>&lt;div class=&quot;tags-control&quot; data-url=&quot;php/get-project-list.php&quot; data-parametername=&quot;tagname&quot; data-clearnotfound=&quot;true&quot;&gt;
@@ -32,7 +32,7 @@
                         </td>
                         <td>
                             <div class="tags-control" data-url="php/get-project-list.php" data-parametername="tagname" data-max="3">
-                                <input type="text" class="tag-input" placeholder="输入标签，回车提交" />
+                                <input type="text" class="tag-input" size="20" placeholder="输入标签，回车提交" />
                             </div>
                         </td>
                         <td><pre>&lt;div class=&quot;tags-control&quot; data-url=&quot;php/get-project-list.php&quot; data-parametername=&quot;tagname&quot; data-max=&quot;3&quot;&gt;
