--- a/form.html
+++ b/form.html
@@ -88,7 +88,7 @@ function pic_upload_success(data) {
                         <td colspan="2">
                             <label for="" class="control-label x85">标签：</label>
                             <div class="tags-control validate[required, minTag[2], maxTag[3]]" data-url="php/get-project-list.php" data-parameterName="tagname" data-clearNotFound="false" data-max="5" errTop="-2">
-                                <input type="text" class="tag-input" placeholder="输入标签，回车提交" />
+                                <input type="text" class="tag-input" size="15" placeholder="输入标签，回车提交" />
                             </div>
                         </td>
                     </tr>
