--- a/dragsort_more.html
+++ b/dragsort_more.html
@@ -1,4 +1,4 @@
-<script type="text/javascript/">
+<script type="text/javascript">
 function IMG_saveOrder_() {
     $('#j_image_box', navTab.getCurrentPanel()).find('.image-seq').each(function(i) {
         var $this = $(this);
@@ -36,7 +36,7 @@ function IMG_saveOrder_() {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="1">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="葫芦娃">
+                        <input type="text" name="title" class="form-control" value="" placeholder="葫芦娃">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
@@ -45,7 +45,7 @@ function IMG_saveOrder_() {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="2">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="绿灯侠">
+                        <input type="text" name="title" class="form-control" value="" placeholder="绿灯侠">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
@@ -54,7 +54,7 @@ function IMG_saveOrder_() {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="3">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="冰雪奇缘">
+                        <input type="text" name="title" class="form-control" value="" placeholder="冰雪奇缘">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
@@ -63,7 +63,7 @@ function IMG_saveOrder_() {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="4">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="机器人瓦力">
+                        <input type="text" name="title" class="form-control" value="" placeholder="机器人瓦力">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
@@ -72,7 +72,7 @@ function IMG_saveOrder_() {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="5">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="小黄人">
+                        <input type="text" name="title" class="form-control" value="" placeholder="小黄人">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                 </div>
