--- a/form-checkbox.html
+++ b/form-checkbox.html
@@ -1,4 +1,4 @@
-<script type="text/javascript/">
+<script type="text/javascript">
 var $chk = $('input[name="sport_checkbox"]');
 $chk.on('ifChanged', function(event) {
     var $target = $(event.target);
