--- a/dragsort.html
+++ b/dragsort.html
@@ -12,7 +12,7 @@ function IMG_Add() {
                '<span class="input-group-addon">顺序</span>' +
                '<input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="2">' +
                '</div>' +
-               '<input type="text" name="title" class="form-control" value="" size="11" placeholder="绿灯侠">' +
+               '<input type="text" name="title" class="form-control" value="" placeholder="绿灯侠">' +
                '<textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>' +
                '</div>';
     $(html).appendTo($('#j_image_box', navTab.getCurrentPanel()));
@@ -52,7 +52,7 @@ function IMG_Drag_Destroy(obj) {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="1">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="葫芦娃">
+                        <input type="text" name="title" class="form-control" value="" placeholder="葫芦娃">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
@@ -61,7 +61,7 @@ function IMG_Drag_Destroy(obj) {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="2">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="绿灯侠">
+                        <input type="text" name="title" class="form-control" value="" placeholder="绿灯侠">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
@@ -70,7 +70,7 @@ function IMG_Drag_Destroy(obj) {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="3">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="冰雪奇缘">
+                        <input type="text" name="title" class="form-control" value="" placeholder="冰雪奇缘">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
@@ -79,7 +79,7 @@ function IMG_Drag_Destroy(obj) {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="4">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="机器人瓦力">
+                        <input type="text" name="title" class="form-control" value="" placeholder="机器人瓦力">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
@@ -88,7 +88,7 @@ function IMG_Drag_Destroy(obj) {
                             <span class="input-group-addon">顺序</span>
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="5">
                         </div>
-                        <input type="text" name="title" class="form-control" value="" size="11" placeholder="小黄人">
+                        <input type="text" name="title" class="form-control" value="" placeholder="小黄人">
                         <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
                     </div>
                 </div>
