修正textarea添加"autosize"实现自动行高

--- a/dragsort.html
+++ b/dragsort.html
@@ -13,7 +13,7 @@ function IMG_Add() {
                '<input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="2">' +
                '</div>' +
                '<input type="text" name="title" class="form-control" value="" placeholder="绿灯侠">' +
-               '<textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>' +
+               '<textarea name="note" rows="1" cols="" class="form-control autosize" placeholder="描述"></textarea>' +
                '</div>';
     $(html).appendTo($('#j_image_box', navTab.getCurrentPanel()));
 }
@@ -53,7 +53,7 @@ function IMG_Drag_Destroy(obj) {
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="1">
                         </div>
                         <input type="text" name="title" class="form-control" value="" placeholder="葫芦娃">
-                        <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
+                        <textarea name="note" rows="1" cols="" class="form-control autosize" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
                         <a href="#" class="thumbnail"><img src="images/002.jpg"></a>
@@ -62,7 +62,7 @@ function IMG_Drag_Destroy(obj) {
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="2">
                         </div>
                         <input type="text" name="title" class="form-control" value="" placeholder="绿灯侠">
-                        <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
+                        <textarea name="note" rows="1" cols="" class="form-control autosize" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
                         <a href="#" class="thumbnail"><img src="images/003.jpg"></a>
@@ -71,7 +71,7 @@ function IMG_Drag_Destroy(obj) {
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="3">
                         </div>
                         <input type="text" name="title" class="form-control" value="" placeholder="冰雪奇缘">
-                        <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
+                        <textarea name="note" rows="1" cols="" class="form-control autosize" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
                         <a href="#" class="thumbnail"><img src="images/004.jpg"></a>
@@ -80,7 +80,7 @@ function IMG_Drag_Destroy(obj) {
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="4">
                         </div>
                         <input type="text" name="title" class="form-control" value="" placeholder="机器人瓦力">
-                        <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
+                        <textarea name="note" rows="1" cols="" class="form-control autosize" placeholder="描述"></textarea>
                     </div>
                     <div class="image-thumb-box">
                         <a href="#" class="thumbnail"><img src="images/005.jpg"></a>
@@ -89,7 +89,7 @@ function IMG_Drag_Destroy(obj) {
                             <input type="text" name="seq" class="form-control image-seq" placeholder="顺序" value="5">
                         </div>
                         <input type="text" name="title" class="form-control" value="" placeholder="小黄人">
-                        <textarea name="note" rows="1" cols="" class="form-control animated" placeholder="描述"></textarea>
+                        <textarea name="note" rows="1" cols="" class="form-control autosize" placeholder="描述"></textarea>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@ function IMG_Drag_Destroy(obj) {
             &lt;input type=&quot;text&quot; name=&quot;seq&quot; class=&quot;form-control image-seq&quot; placeholder=&quot;顺序&quot; value=&quot;1&quot;&gt;
         &lt;/div&gt;
         &lt;input type=&quot;text&quot; name=&quot;title&quot; class=&quot;form-control&quot; value=&quot;&quot; size=&quot;11&quot; placeholder=&quot;葫芦娃&quot;&gt;
-        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control animated&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
+        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control autosize&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
     &lt;div class=&quot;image-thumb-box&quot;&gt;
         &lt;a href=&quot;#&quot; class=&quot;thumbnail&quot;&gt;&lt;img src=&quot;images/002.jpg&quot;&gt;&lt;/a&gt;
@@ -118,7 +118,7 @@ function IMG_Drag_Destroy(obj) {
             &lt;input type=&quot;text&quot; name=&quot;seq&quot; class=&quot;form-control image-seq&quot; placeholder=&quot;顺序&quot; value=&quot;2&quot;&gt;
         &lt;/div&gt;
         &lt;input type=&quot;text&quot; name=&quot;title&quot; class=&quot;form-control&quot; value=&quot;&quot; size=&quot;11&quot; placeholder=&quot;绿灯侠&quot;&gt;
-        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control animated&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
+        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control autosize&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
     &lt;div class=&quot;image-thumb-box&quot;&gt;
         &lt;a href=&quot;#&quot; class=&quot;thumbnail&quot;&gt;&lt;img src=&quot;images/003.jpg&quot;&gt;&lt;/a&gt;
@@ -127,7 +127,7 @@ function IMG_Drag_Destroy(obj) {
             &lt;input type=&quot;text&quot; name=&quot;seq&quot; class=&quot;form-control image-seq&quot; placeholder=&quot;顺序&quot; value=&quot;3&quot;&gt;
         &lt;/div&gt;
         &lt;input type=&quot;text&quot; name=&quot;title&quot; class=&quot;form-control&quot; value=&quot;&quot; size=&quot;11&quot; placeholder=&quot;冰雪奇缘&quot;&gt;
-        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control animated&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
+        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control autosize&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
     &lt;div class=&quot;image-thumb-box&quot;&gt;
         &lt;a href=&quot;#&quot; class=&quot;thumbnail&quot;&gt;&lt;img src=&quot;images/004.jpg&quot;&gt;&lt;/a&gt;
@@ -136,7 +136,7 @@ function IMG_Drag_Destroy(obj) {
             &lt;input type=&quot;text&quot; name=&quot;seq&quot; class=&quot;form-control image-seq&quot; placeholder=&quot;顺序&quot; value=&quot;4&quot;&gt;
         &lt;/div&gt;
         &lt;input type=&quot;text&quot; name=&quot;title&quot; class=&quot;form-control&quot; value=&quot;&quot; size=&quot;11&quot; placeholder=&quot;机器人瓦力&quot;&gt;
-        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control animated&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
+        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control autosize&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
     &lt;div class=&quot;image-thumb-box&quot;&gt;
         &lt;a href=&quot;#&quot; class=&quot;thumbnail&quot;&gt;&lt;img src=&quot;images/005.jpg&quot;&gt;&lt;/a&gt;
@@ -145,7 +145,7 @@ function IMG_Drag_Destroy(obj) {
             &lt;input type=&quot;text&quot; name=&quot;seq&quot; class=&quot;form-control image-seq&quot; placeholder=&quot;顺序&quot; value=&quot;5&quot;&gt;
         &lt;/div&gt;
         &lt;input type=&quot;text&quot; name=&quot;title&quot; class=&quot;form-control&quot; value=&quot;&quot; size=&quot;11&quot; placeholder=&quot;小黄人&quot;&gt;
-        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control animated&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
+        &lt;textarea name=&quot;note&quot; rows=&quot;1&quot; cols=&quot;&quot; class=&quot;form-control autosize&quot; placeholder=&quot;描述&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
 &lt;/div&gt;</pre>
             <br>
