--- a/form-input.html
+++ b/form-input.html
@@ -46,6 +46,16 @@ function pic_form_upload_success(data) {
                     </tr>
                     <tr>
                         <td>
+                            <label for="j_form_textarea" class="control-label x85">多行文本框：</label>
+                        </td>
+                        <td>
+                            <textarea name="textarea" id="j_form_textarea" class="form-control autosize" cols="20" rows="1" placeholder="多行文本框，自动行高"></textarea>
+                        </td>
+                        <td>form-control autosize</td>
+                        <td>textarea 添加Class [<span class="red">autosize</span>] 即可实现自动行高。</td>
+                    </tr>
+                    <tr>
+                        <td>
                             <label for="j_form_text3" class="control-label x85">行内提示：</label>
                         </td>
                         <td>
