增加交流Q群：232781006

--- a/index.html
+++ b/index.html
@@ -201,20 +201,21 @@ function MainMenuClick(event, treeId, treeNode) {
                     <div class="page unitBox">
                         <div class="accountInfo">
                             <div style="padding: 0 15px; border-bottom: 1px #DDD solid;">
-                                <h4>Bootstrap for DWZ富客户端框架</h4>
+                                <h4>Bootstrap for DWZ富客户端框架 　　<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=0047455f3845597286edd381d54076b1e10a45c0c735115f0ee74961f70880af"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="[B-JUI]Bootstrap4DWZ交流群" title="[B-JUI]Bootstrap4DWZ交流群" style="vertical-align:top;"></a></h4>
                                 <hr style="margin: 12px 0 0px;">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <h5>网址：<a href="http://www.xknaan.com/" target="_blank">http://www.xknaan.com/</a></h5>
-                                        <h5>项目地址：<a href="http://git.oschina.net/xknaan/Bootstrap_for_DWZ" target="_blank">Bootstrap_for_DWZ Git@OSC</a></h5>
+                                        <h5>项目地址：<a href="http://git.oschina.net/xknaan/Bootstrap_for_DWZ" target="_blank">GIT</a>　<a href="http://www.oschina.net/p/bootstrap-for-DWZ" target="_blank">OSCHINA</a></h5>
                                         <h5>微博地址：<a href="http://weibo.com/xknaan" target="_blank">http://weibo.com/xknaan</a></h5>                                    
                                     </div>
                                     <div class="col-md-6">
-                                        
                                         <h5>DWZ(J-UI)官网：<a href="http://www.j-ui.com/" target="_blank">http://www.j-ui.com/</a></h5>
                                         <h5>Bootstrap中文网：<a href="http://www.bootcss.com/" target="_blank">http://www.bootcss.com/</a></h5>
+                                        <h5>QQ交流群：232781006</h5>
                                     </div>
                                 </div>
+                                <h5></h5>
                             </div>
                         </div>
                         <div class="pageFormContent" layoutH="100">
