1.修改dialog的刷新方法为：refresh(dialogId)，刷新当前窗口可不带ID 2.增加navTab和dialog的自定义事件注册方法：registerEvent(eventName, event) 3.为navTab和dialog注册了事件“beforeLoad.b-jui”，用于销毁bootstrap-select菜单,避免反复生成[主要针对selectpicker的data-container="body"的情况

--- a/dialog.html
+++ b/dialog.html
@@ -46,6 +46,12 @@ function pic_form_upload_success(data) {
                 </tr>
                 <tr>
                     <td colspan="4"><br>
+                        <span>修改刷新方法为：refresh(dialogId) ，刷新一个弹出窗口，不指定ID则刷新当前窗口。使用： $.pdialog.refresh(dialogId)。</span><br>
+                        <span>URL变化了的重新载入仍为：reload(url, options)</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="4"><br>
                         * 其他同DWZ：<a href="http://j-ui.com" target="_blank">http://j-ui.com</a>。
                     </td>
                 </tr>
