--- a/table-edit-lookup.html
+++ b/table-edit-lookup.html
@@ -7,7 +7,7 @@
             <ul class="searchContent">
                 <li><label>名称：</label><input type="text" value="" name="code" class="form-control" size="10" /></li>
                 <li><button type="submit" class="btn btn-default btn-sm">查询</button></li>
-                <li><a class="btn btn-orange btn-sm" href="javascript:$.pdialog.refresh({});">清空查询</a></li>
+                <li><a class="btn btn-orange btn-sm" href="javascript:$.pdialog.refresh();">清空查询</a></li>
                 <li class="pull-right">
                     <button type="button" class="btn btn-default btn-sm" multlookup="ids" warn="请至少选择一项职业">选择选中</button>
                 </li>
